<resources>
    <string name="app_name">NewsApp-MVVM-Architecture</string>

    <string name="home">Home</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="new_sources">News Sources</string>
    <string name="countries">Countries</string>
    <string name="languages">Languages</string>
    <string name="search">Search</string>
    <string name="search_here">Search news here</string>

    <string name="news_list_by_source">News by source</string>
    <string name="news_list_by_country">News by country</string>
    <string name="news_list_by_language">News by language</string>

    <string name="country_selection">Country Selection</string>
    <string name="language_Selection">Language Selection</string>

    <string name="error_msg_image">Not Image URL found</string>

    <string-array name="country_name">
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Cuba</item>
        <item>Czech Republic</item>
        <item>Egypt</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Latvia</item>
        <item>Lithuania</item>
        <item>Malaysia</item>
        <item>Mexico</item>
        <item>Morocco</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Saudi Arabia</item>
        <item>Serbia</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>UAE</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Venezuela</item>
    </string-array>

    <string-array name="country_code">
        <item>AR</item>
        <item>AU</item>
        <item>AT</item>
        <item>BE</item>
        <item>BR</item>
        <item>BG</item>
        <item>CA</item>
        <item>CN</item>
        <item>CO</item>
        <item>CU</item>
        <item>CZ</item>
        <item>EG</item>
        <item>FR</item>
        <item>DE</item>
        <item>GR</item>
        <item>HK</item>
        <item>HU</item>
        <item>IN</item>
        <item>ID</item>
        <item>IE</item>
        <item>IL</item>
        <item>IT</item>
        <item>JP</item>
        <item>LV</item>
        <item>LT</item>
        <item>MY</item>
        <item>MX</item>
        <item>MA</item>
        <item>NL</item>
        <item>NZ</item>
        <item>NG</item>
        <item>NO</item>
        <item>PH</item>
        <item>PL</item>
        <item>PT</item>
        <item>RO</item>
        <item>RU</item>
        <item>SA</item>
        <item>RS</item>
        <item>SG</item>
        <item>SK</item>
        <item>SI</item>
        <item>ZA</item>
        <item>KR</item>
        <item>SE</item>
        <item>CH</item>
        <item>TW</item>
        <item>TH</item>
        <item>TR</item>
        <item>AE</item>
        <item>UA</item>
        <item>GB</item>
        <item>US</item>
        <item>VE</item>
    </string-array>

    <string-array name="language_names">
        <item>Arabic</item>
        <item>German</item>
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Hebrew</item>
        <item>Italian</item>
        <item>Dutch</item>
        <item>Norwegian</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Swedish</item>
        <item>Chinese</item>
    </string-array>

    <string-array name="language_codes">
        <item>ar</item>
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>he</item>
        <item>it</item>
        <item>nl</item>
        <item>no</item>
        <item>pt</item>
        <item>ru</item>
        <item>sv</item>
        <item>zh</item>
    </string-array>

    <!--Error messages-->
    <string name="no_data_found">No news available according to your country/language selection or search result.</string>
    <string name="some_error">Ooops, \n Something went wrong. \n Let\'s try again also check your network.</string>
    <string name="try_again">Try Again</string>
    <string name="search_text">It seems like you haven\'t searched for anything yet. \nDon\'t worry, our vast collection of news articles is at your fingertips! Use the search bar above to discover the latest updates, trending topics, or explore specific interests.</string>
</resources>