<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.mainactivity.MainActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="25dp">

                <Button
                    android:id="@+id/btn_topHeadlines"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:background="@color/teal_700"
                    android:padding="25dp"
                    android:text="@string/top_headlines"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <Button
                    android:id="@+id/btn_newSources"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:background="@color/teal_700"
                    android:padding="25dp"
                    android:text="@string/new_sources"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <Button
                    android:id="@+id/btn_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:background="@color/teal_700"
                    android:padding="25dp"
                    android:text="@string/countries"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <Button
                    android:id="@+id/btn_languages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:background="@color/teal_700"
                    android:padding="25dp"
                    android:text="@string/languages"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:background="@color/teal_700"
                    android:padding="25dp"
                    android:text="@string/search"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>