<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.searchactivity.SearchActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_tint"
            android:textSize="20dp"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_here" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/no_search_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:lineSpacingExtra="8dp"
                android:text="@string/search_text"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:visibility="visible" />

            <RelativeLayout
                android:id="@+id/rl_error_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:lineSpacingExtra="10dp"
                    android:text="@string/some_error"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_tryAgain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_error"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:background="@color/red"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/try_again"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>
</layout>